<resources>
    <string name="app_name">Dev International College</string>
    <string name="todo">TODO</string>
    <string name="welcome">WELCOME</string>
    <string name="college">College</string>
    <string name="dev">Dev</string>
    <string name="international">International</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="about_us">About-us</string>
    <string name="login2">Login</string>
    <string name="emailreg">Email</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="registration">REGISTRATION</string>
    <string name="aboutfirst">Please, if you use this application, then the user of the application can be done by the user-interface button or else the application will not work properly and the chances of crash can also increase.</string>
    <string name="aboutSecond">And if possible, remember your email and password because this application is not so optimized right now that the email and password reset or update</string>
    <string name="back">BACK</string>
    <string name="todo2">TODO</string>
    <string name="home">HOME</string>
    <string name="find_courses">Find Courses</string>
    <string name="images">IMAGES</string>
    <string name="logout">Logout</string>
    <string name="todo21">TODO</string>
    <string name="back1">Back</string>
    <string name="top_courses">Top Courses</string>
    <string name="q">TODO</string>
    <string name="bca">BCA</string>
    <string name="x">TODO</string>
    <string name="ba">BA</string>
    <string name="c">TODO</string>
    <string name="bsc">BSC</string>
    <string name="cc">TODO</string>
    <string name="ma">MA</string>
    <string name="ccc">TODO</string>
    <string name="b_com">b.com</string>
    <string name="cccc">TODO</string>
    <string name="ccccc">b.com</string>
    <string name="b_c_a">B.C.A</string>
    <string name="first_year">First-Year</string>
    <string name="second_year">Second-Year</string>
    <string name="final_year">Final-Year</string>
    <string name="open_syllabus">Open Syllabus</string>
    <string name="practical">Practical</string>
    <string name="first_yearbca">FIRST-YEAR</string>
    <string name="second_yearbca">SECOND-YEAR</string>
    <string name="final_yearbca">FINAL-YEAR</string>
    <string name="students_list">Students-List</string>
    <string name="enter_first_name">Enter First-Name</string>
    <string name="enter_last_name">Enter Last-Name</string>
    <string name="enter_name_to_delete">Enter name to delete</string>
    <string name="delete_data">Delete Data</string>
    <string name="loading">Loading...</string>
    <string name="insert_data">Insert Data</string>
    <string name="delete_datas">Delete Data</string>
    <string name="enter_first_name_to_delete">Enter first name to delete</string>
    <string name="delete">Delete</string>
    <string name="semester_first">SEMESTER-FIRST</string>
    <string name="semester_second">SEMESTER-SECOND</string>
    <string name="semester_third">SEMESTER-THIRD</string>
    <string name="semester_fourth">SEMESTER-FOURTH</string>
    <string name="semester_fifth">SEMESTER-FIFTH</string>
    <string name="note_semester_fifth_and_sixth_not_available">Note: Semester-Fifth and Sixth Not Available</string>
    <string name="semesters">SEMESTERS</string>
    <string name="aaa">TODO</string>
    <string name="insert_datas">INSERT-DATA</string>
    <string name="first_name">First-Name</string>
    <string name="last_name">Last-Name</string>
    <string name="sssss">Email</string>
    <string name="mobile_number">Mobile-Number</string>
    <string name="address">Address</string>
    <string name="skills">Skills</string>
    <string name="sssssssss">Insert Data</string>
    <string name="open_geography_semester">Open Geography Semester</string>
    <string name="open_geography_hons_semester">Open Geography-Hons. Semester</string>
    <string name="open_history_semester">Open History Semester</string>
    <string name="open_home_sci_semester">Open Home-Sci. Semester</string>
    <string name="open_hindi_semester">Open Hindi Semester</string>
    <string name="open_music_sitar_semester">Open Music-Sitar Semester</string>
    <string name="open_music_vocals_semester">Open Music-Vocals Semester</string>
    <string name="open_economics_semester">Open Economics Semester</string>
    <string name="open_political_sci_semester">Open Political-Sci. Semester</string>
    <string name="open_physical_edu_semester">Open Physical-Edu. Semester</string>
    <string name="open_english_semester">Open English Semester</string>
    <string name="open_draw_and_paint_semester">Open Draw-and-Paint Semester</string>
    <string name="sdfgh">TODO</string>
    <string name="cvb">TODO</string>
    <string name="asdfghjk">TODO</string>
    <string name="subjects">SUBJECTS</string>
    <string name="eafm">EAFM</string>
    <string name="abst">ABST</string>
    <string name="badl">BADL</string>
    <string name="note_abst_and_badl_not_available_in_this_application">Note: ABST and BADL not available in this application</string>
    <string name="semester">Semester</string>
    <string name="semester_sixth">SEMESTER-SIXTH</string>
    <string name="year">YEAR</string>
    <string name="math">MATH</string>
    <string name="mathematics">Mathematics</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">PHYSICS</string>
    <string name="bio">BIO</string>
    <string name="botany">BOTANY</string>
    <string name="zoology">ZOOLOGY</string>
    <string name="asdfghjkert">TODO</string>
    <string name="pre_year">Pre-Year</string>
    <string name="final_yeare">Final-Year</string>
    <string name="previous">Previous</string>
    <string name="finals">Final</string>
    <string name="geography_subject">Geography Subject</string>
    <string name="political_science">Political-Science</string>
    <string name="english_lit">English-Lit</string>
    <string name="pre_yearsd">PRE-YEAR</string>
    <string name="hindi_lit">Hindi-Lit</string>
    <string name="final_yearsdf">FINAL-YEAR</string>
    <string name="new_register">New Register</string>
    <string name="first_year_syllabus_pdf">First-Year-Syllabus-PDF</string>
    <string name="second_year_syllabus_pdf">Second-Year-Syllabus_PDF</string>
    <string name="final_year_syllabus_pdf">Final-Year-Syllabus-PDF</string>
    <string name="semester_sixth_g">SEMESTER-SIXTH</string>
    <string name="cdev">DEV</string>
    <string name="internationalSDFH">INTERNATIONAL</string>
    <string name="sdfsg">COLLEGE</string>
    <string name="submit">Submit</string>
    <string name="dev_international_college_map_https_maps_app_goo_gl_14eyytwiwsb9hy5b9">📍 Dev International College Map: https://maps.app.goo.gl/14eyytwiWSB9hy5B9</string>
    <string name="dev_college_map">Dev College Map</string>
    <string name="university_panel">University Panel</string>
    <string name="question_papers">Question Papers</string>
</resources>