<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@drawable/ba_all_semester_background_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BAPackage.BASemesterFirstActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester_first"
        android:textStyle="bold"
        android:layout_marginTop="40sp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="#070501" />
    <LinearLayout
        android:layout_marginTop="10sp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:background="@drawable/ba_all_semester_layout_style"
        android:layout_width="350dp"
        android:layout_height="700dp">
        <Button
            android:id="@+id/geoSemBtn"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_geography_semester" />
        <Button
            android:id="@+id/geoHonsBtn"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_geography_hons_semester" />
        <Button
            android:id="@+id/historySemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_history_semester" />
        <Button
            android:id="@+id/homeSciSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_home_sci_semester" />
        <Button
            android:id="@+id/hindiSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_hindi_semester" />
        <Button
            android:id="@+id/musicSitarSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_music_sitar_semester" />
        <Button
            android:id="@+id/musicVocalsSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_music_vocals_semester" />
        <Button
            android:id="@+id/ecoSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_economics_semester" />
        <Button
            android:id="@+id/PolSciSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_political_sci_semester"/>
        <Button
            android:id="@+id/phyEduSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:text="@string/open_physical_edu_semester" />
        <Button
            android:id="@+id/englishSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_english_semester" />
        <Button
            android:id="@+id/drawandpaintSemBtn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_draw_and_paint_semester" />
    </LinearLayout>
    <Button
        android:id="@+id/backBtn1Subjects"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/back"
        android:backgroundTint="@color/black" />
</LinearLayout>