<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@drawable/login_background_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingActivities.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="30dp"
        android:text="@string/dev"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/international"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center"
        android:text="@string/college"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/college_icon_logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_layout_background_style"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login2"
            android:layout_marginTop="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="#0672DF"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/LoginUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30sp"
            android:background="@drawable/login_edittextview_style"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="#0672DF"
            android:textColorHint="#0672DF"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30sp"
            android:background="@drawable/login_edittextview_style"
            android:gravity="center"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:textColor="#0672DF"
            android:textColorHint="#0672DF"
            android:textSize="15sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="50sp"
            android:layout_marginLeft="50sp"
            android:backgroundTint="#0672DF"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/textView3newUser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="#0672DF"
            android:text="@string/new_register"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="70sp"
            android:layout_marginRight="70sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/aboutClick"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:backgroundTint="#0672DF"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>