<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BCACourse.InsertingDataActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="50sp"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:background="@drawable/inserting_data_layout_style"
        android:layout_height="650dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/insert_datas"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#613CA2"
            />
        <EditText
            android:id="@+id/etFname"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="#613CA2"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/etLname"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="#613CA2"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sssss"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="#613CA2"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/etMnumber"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="#613CA2"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/etAddress"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="#613CA2"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/etSkills"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skills"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="#613CA2"
            android:inputType="textPersonName"/>
        <Button
            android:id="@+id/btnInsert"
            android:layout_width="150dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sssssssss"
            android:backgroundTint="#613CA2"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="80dp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/aaa"
        android:src="@drawable/inserting_images"
        />
</LinearLayout>