<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/ba_all_semester_background_image"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BAPackage.BASemesterSecondActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/semester_second"
    android:textStyle="bold"
    android:layout_marginTop="55sp"
    android:textAlignment="center"
    android:textSize="25sp"
    android:textColor="#070501"
    />
    <LinearLayout
        android:layout_marginTop="40sp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="40sp"
        android:layout_marginRight="30sp"
        android:layout_marginLeft="30sp"
        android:background="@drawable/ba_all_semester_layout_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/geoSem2Btn"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:text="@string/open_geography_semester" />
        <Button
            android:id="@+id/geoHons2Btn"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_geography_hons_semester" />
        <Button
            android:id="@+id/historySem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_history_semester" />
        <Button
            android:id="@+id/homeSciSub2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_home_sci_semester" />
        <Button
            android:id="@+id/hindiSem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_hindi_semester" />
        <Button
            android:id="@+id/musicSitarSem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_music_sitar_semester" />
        <Button
            android:id="@+id/musicVocalsSem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_music_vocals_semester" />
        <Button
            android:id="@+id/ecoSem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_economics_semester" />
        <Button
            android:id="@+id/PolSciSem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_political_sci_semester"/>
        <Button
            android:id="@+id/phyEduSem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_physical_edu_semester" />
        <Button
            android:id="@+id/englishSem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_english_semester" />
        <Button
            android:id="@+id/drawandpaintSem2Btn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#FD7FB1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/open_draw_and_paint_semester" />
    </LinearLayout>
</LinearLayout>