<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BCOMPackage.BCOMAllSubjectsActivity">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="30sp"
    android:contentDescription="@string/asdfghjk"
    android:src="@drawable/bcom_main_background"
    />
    <TextView
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/subjects"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#F6CC47"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
   <LinearLayout
       android:orientation="vertical"
       android:layout_gravity="center"
       android:background="@drawable/bcom_layout_style"
       android:layout_width="350dp"
       android:layout_height="400dp">
       <TextView
           android:id="@+id/EAFMClick"
           android:layout_width="200dp"
           android:layout_height="50dp"
           android:text="@string/eafm"
           android:background="@drawable/bcom_layout_style"
           android:layout_gravity="center"
           android:gravity="center"
           android:layout_marginTop="20dp"
           android:textSize="25sp"
           android:textColor="#1CA4ED "
           android:textStyle="bold"
           />
       <TextView
           android:id="@+id/ABSTClick"
           android:layout_width="200dp"
           android:layout_height="50dp"
           android:text="@string/abst"
           android:background="@drawable/bcom_layout_style"
           android:layout_gravity="center"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:textSize="25sp"
           android:textColor="#1CA4ED"
           android:textStyle="bold"
           />
       <TextView
           android:id="@+id/BADLClick"
           android:layout_width="200dp"
           android:layout_height="50dp"
           android:text="@string/badl"
           android:background="@drawable/bcom_layout_style"
           android:layout_gravity="center"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:textSize="25sp"
           android:textColor="#1CA4ED"
           android:textStyle="bold"
           />
       <TextView
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:text="@string/note_abst_and_badl_not_available_in_this_application"
           android:textColor="#1CA4ED"
           android:textStyle="italic"
           android:textSize="15sp"
           android:layout_gravity="center"
           android:gravity="center"
           android:layout_marginTop="160sp"
           />
   </LinearLayout>
    <Button
        android:id="@+id/backBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#F6CC47"
        android:text="@string/back"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="60dp"
        />
</LinearLayout>